@@ -1,5 +1,9 @@
 2005-03-18  Mark McLoughlin  <markmc@redhat.com>
 
+	* sabayon.spec.in: forgot some fixes.
+
+2005-03-18  Mark McLoughlin  <markmc@redhat.com>
+
 	Re-work the way we install all the python stuff to
 	bring us in line with normal conventions.
 
